--- a/src/common/header/Header.css
+++ b/src/common/header/Header.css
@@ -3,11 +3,12 @@
     height: 36px;
     padding: 8px 32px 8px 16px ;
 }
-img{
+.headerlogo{
     background-color: #ad8282;
     height: 35px;
     animation: headerLogo 8s linear infinite  ;
     float: left;
+   
 }
 @keyframes headerLogo{
     0%{transform:rotate(0deg);}
