--- a/src/common/header/Header.css
+++ b/src/common/header/Header.css
@@ -14,3 +14,11 @@
     0%{transform:rotate(0deg);}
     100%{transform:rotate(360deg);}
 }
+.button{
+    float: right;
+    color:white;
+    background-color:blue;
+    padding:1%;
+    cursor: pointer;
+    
+}
